--- a/index.html
+++ b/index.html
@@ -109,8 +109,17 @@
         <div class="col-lg-5 d-flex flex-column justify-content-center about-text-wrapper">
           <p class="about-text" data-aos="fade-up" data-aos-delay="200">VSWS was founded in the loving memory of Shri Vijay Shanker Tare, a selfless social worker who devoted his life to serving others. Under the leadership of Smt. Tilottama Tare, the Society works tirelessly to support marginalized children and women, helping them access education, health services, and the skills to build better futures.</p><br>
           <p class="about-text" data-aos="fade-up" data-aos-delay="300">We believe that education is the most powerful tool for social change. At VSWS, we strive to end child labor and promote literacy by bringing children into classrooms, not landfills. Our goal is to raise responsible, empowered individuals who lead their communities with integrity and compassion.</p><br>
+          <p class="about-text" data-aos="fade-up" data-aos-delay="300">Our vision is to create a society where childhood is joyful, womanhood is empowered, and the environment is respected. Our mission is to drive awareness and action around social and ecological issues, enabling the deprived to realize their full potential through education, care, and community support.</p><br>
           <p class="about-text" data-aos="fade-up" data-aos-delay="400">
-            <span class="about-motto">Our vision is to create a society where childhood is joyful, womanhood is empowered, and the environment is respected. Our mission is to drive awareness and action around social and ecological issues, enabling the deprived to realize their full potential through education, care, and community support.</span>
+            <div class="quote-container">
+              <blockquote class="elegant-quote">
+                "Education is the most powerful weapon we can use to change the world — and every child deserves access to it."
+                <footer class="quote-attribution">
+                  <cite>Smt. Tilottama Tare</cite>
+                  <span class="attribution-title">President, VSWS</span>
+                </footer>
+              </blockquote>
+            </div>
           </p>
         </div>
         <div class="col-lg-7 d-flex justify-content-center d-none d-lg-block" data-aos="fade-up" data-aos-delay="200">
@@ -123,6 +132,15 @@
             </div>
             <div class="d-flex align-items-center abt-img-wrapper w-50">
               <img class="img-fluid" src="./content//For Carousel/UdayProject1.jpg" alt="">
+            </div>
+            <div class="d-flex align-items-center abt-img-wrapper w-50">
+              <img class="img-fluid" src="./content//For Carousel/mm.jpg" alt="">
+            </div>
+            <div class="d-flex align-items-center abt-img-wrapper w-50">
+              <img class="img-fluid" src="./content//For Carousel/image-133-q6tx2o3s6dc4e9odz60cdxcy32dtz0bmkz2e4ncl80.png" alt="">
+            </div>
+            <div class="d-flex align-items-center abt-img-wrapper w-50">
+              <img class="img-fluid" src="./content//For Carousel/prithviproject5.png" alt="">
             </div>
           </div>
         </div>
@@ -177,29 +195,160 @@
           <p>That small, consistent acts of kindness can change the world</p>
         </div>
       </div>
+
+      <div class="section-title-secondary mt-5">
+        <h1>Achievements</h1>
+      </div>
+
       <div class="row justify-content-center my-3">
-        <div class="col-md-5 px-5">
-          <img src="./content/For acheivements/download (1).png" alt="certificate" class="img-fluid">
-        </div>
-        <div class="col-md-6 pt-3 ps-5 d-flex flex-column about-text">
-          <h3 class="mt-2"><strong>1<sup>st</sup> Position in ...</strong></h3>
-          <p>description</p>
+        <div class="container certificate-carousel">
+          <div class="certificate-slide active">
+            <div class="col-md-5 px-5">
+              <img src="./content/For acheivements/00_Certificate.jpg" alt="Shiksha Sankalp Certificate" class="img-fluid">
+            </div>
+            <div class="col-md-6 pt-3 ps-5 d-flex flex-column about-text">
+              <h3 class="mt-2"><strong>Recipient of the Shiksha Sankalp Certificate</strong></h3>
+              <p>under the Ministry of Education, Government of India, during India's G-20 Presidency year (2023), for dedication to lifelong learning and nation-building through education.</p>
+            </div>
+          </div>
+
+          <div class="certificate-slide">
+            <div class="col-md-5 px-5">
+              <img src="./content/For acheivements/04_Certificate.jpg" alt="Certificate 2" class="img-fluid">
+            </div>
+            <div class="col-md-6 pt-3 ps-5 d-flex flex-column about-text">
+              <h3 class="mt-2"><strong>Teacher Innovation Award</strong></h3>
+              <p>by Sri Aurobindo Society's ZIIEI Program, supported by HDFC Bank's Parivartan initiative, for pioneering joyful, low-investment teaching models (2020).</p>
+            </div>
+          </div>
+
+          <div class="certificate-slide">
+            <div class="col-md-5 px-5">
+              <img src="./content/For acheivements/09_Certificate.jpg" alt="Certificate 3" class="img-fluid">
+            </div>
+            <div class="col-md-6 pt-3 ps-5 d-flex flex-column about-text">
+              <h3 class="mt-2"><strong>Inspiring Climate Educator Award</strong></h3>
+              <p>at the National Green Mentors Conference 2019, recognizing contributions to sustainability education and green school advocacy across India.</p>
+            </div>
+          </div>
+
+          <div class="certificate-slide">
+            <div class="col-md-5 px-5">
+              <img src="./content/For acheivements/03_Certificate.jpeg" alt="Certificate 4" class="img-fluid">
+            </div>
+            <div class="col-md-6 pt-3 ps-5 d-flex flex-column about-text">
+              <h3 class="mt-2"><strong>Certificate of Appreciation by Heruka Hunar (2021)</strong></h3>
+              <p>for extraordinary dedication to community welfare and social work across Indore's vulnerable communities.</p>
+            </div>
+          </div>
+
+          <div class="certificate-slide">
+            <div class="col-md-5 px-5">
+              <img src="./content/For acheivements/02_Certificate.jpeg" alt="Certificate 4" class="img-fluid">
+            </div>
+            <div class="col-md-6 pt-3 ps-5 d-flex flex-column about-text">
+              <h3 class="mt-2"><strong>Listed among "Environmental Heroes"</strong></h3>
+              <p>in the Hawaizaade radio series by 94.3 My FM & Indore Police, for leadership in civic cleanliness and green activism.</p>
+            </div>
+          </div>
+
+          <div class="certificate-slide">
+            <div class="col-md-5 px-5">
+              <img src="./content/For acheivements/05_Certificate.jpg" alt="Certificate 4" class="img-fluid">
+            </div>
+            <div class="col-md-6 pt-3 ps-5 d-flex flex-column about-text">
+              <h3 class="mt-2"><strong>Honored by the Ministry of Women & Child Development</strong></h3>
+              <p>for taking the International Women's Day 2020 Pledge, affirming a commitment to gender justice and dignity.</p>
+            </div>
+          </div>
+
+          <div class="certificate-slide">
+            <div class="col-md-5 px-5">
+              <img src="./content/For acheivements/10_Certificate.jpg" alt="Certificate 4" class="img-fluid">
+            </div>
+            <div class="col-md-6 pt-3 ps-5 d-flex flex-column about-text">
+              <h3 class="mt-2"><strong>Recognized at SDPS Women's College IPR Summit 2021</strong></h3>
+              <p>for contributions to education and intellectual property awareness among women learners.</p>
+            </div>
+          </div>
+
+          <div class="certificate-slide">
+            <div class="col-md-5 px-5">
+              <img src="./content/For acheivements/08_Certificate.jpg" alt="Certificate 4" class="img-fluid">
+            </div>
+            <div class="col-md-6 pt-3 ps-5 d-flex flex-column about-text">
+              <h3 class="mt-2"><strong>Felicitated by Nagar Palika Nigam, Indore</strong></h3>
+              <p>for outstanding efforts in civic engagement, awareness campaigns, and community mobilization under the Swachhta Pakhwada 2019.</p>
+            </div>
+          </div>
+
+          <div class="certificate-slide">
+            <div class="col-md-5 px-5">
+              <img src="./content/For acheivements/01_Certificate.jpeg" alt="Certificate 4" class="img-fluid">
+            </div>
+            <div class="col-md-6 pt-3 ps-5 d-flex flex-column about-text">
+              <h3 class="mt-2"><strong>Awarded the Devarth Award 2021</strong></h3>
+              <p>honored as a Heartful Harbinger for her grassroots leadership.</p>
+            </div>
+          </div>
+
+          <div class="certificate-slide">
+            <div class="col-md-5 px-5">
+              <img src="./content/For acheivements/08_Certificate.jpg" alt="Certificate 4" class="img-fluid">
+            </div>
+            <div class="col-md-6 pt-3 ps-5 d-flex flex-column about-text">
+              <h3 class="mt-2"><strong>Felicitated by Nagar Palika Nigam, Indore</strong></h3>
+              <p>for outstanding efforts in civic engagement, awareness campaigns, and community mobilization under the Swachhta Pakhwada 2019.</p>
+            </div>
+          </div>
+
+
+          <button class="certificate-nav-button certificate-prev">
+            <i class="fas fa-chevron-left"></i>
+          </button>
+          <button class="certificate-nav-button certificate-next">
+            <i class="fas fa-chevron-right"></i>
+          </button>
+
+          <div class="certificate-pagination">
+            <span class="dot active"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+          </div>
         </div>
       </div>
       <div class="row my-3" data-aos="fade-up" data-aos-delay="200">
         <div class="col-md-6 pt-3 ps-5 d-flex flex-column about-text">
-          <h3 class="mt-2"><strong>Media Recongnition</strong></h3>
-          <p>which media, newspapers, etc. have reported about us? (description)</p>
+          <h3 class="mt-2"><strong>Media Recognition</strong></h3>
+          <p>Our initiatives have received significant coverage in local newspapers, highlighting our community impact:</p>
+          <ul style="list-style-type: disc; padding-left: 20px;">
+            <li>Featured in local newspapers for organizing an organ donation awareness camp in collaboration with Vijay Social Welfare Society and Indore Organ Donation Society. The event included expert talks by Dr. Manish Purohit and Dr. Nidhi Mishra from MGM Medical College, where participants took pledges for organ donation.<br><br></li>
+            <li>Coverage of our women's health awareness program where medical specialists provided health-related information to female staff members. The event saw participation of over 85 women and included interactive Q&A sessions with doctors.<br><br></li>
+            <li>Recognition of our organ donation awareness initiatives, where members took solemn pledges for organ donation. The event was coordinated by Madhuri Moyade and Mukul Tare, with special mentions of donors like Lata Gurjar, Soni, Ashok Temle, and others who were honored for their commitment.<br><br></li>
+          </ul>
         </div>
         <div class="col-md-6 d-flex align-items-center">
           <div class="swiper mySwiper">
             <div class="swiper-wrapper">
               <div data-history="1" class="swiper-slide"><img class="paper-horizontal"
-                  src="./content/For acheivements/images.jpg" alt=""></div>
+                  src="./content/For acheivements/449494167_470183062271241_2835308158691830286_n-e1722690588597.jpg" alt=""></div>
               <div data-history="Slide 2" class="swiper-slide"><img class="paper-horizontal"
-                  src="./content/For acheivements/MT2.jpeg" alt=""></div>
+                  src="./content/For acheivements/453046356_483745917581622_351715629541644288_n-768x501.jpg" alt=""></div>
               <div data-history="3" class="swiper-slide"><img class="paper-vertical"
-                  src="./content/For acheivements/WhatsApp Image 2021-10-24 at 5.40.38 PM.jpeg" alt=""></div>
+                  src="./content/For acheivements/453188877_483745857581628_3409682140097777967_n.jpg" alt=""></div>
+              <div data-history="4" class="swiper-slide"><img class="paper-horizontal" src="./content/For acheivements/396719221_331901882766027_716915982491191521_n.jpg" alt="Newspaper Coverage 4"></div>
+              <div data-history="5" class="swiper-slide"><img class="paper-horizontal" src="./content/For acheivements/329426115_240727048304260_7891021019085135429_n-300x233.jpg" alt="Newspaper Coverage 5"></div>
+              <div data-history="6" class="swiper-slide"><img class="paper-horizontal" src="./content/For acheivements/4-6-204x300.jpg" alt="Newspaper Coverage 6"></div>
+              <div data-history="7" class="swiper-slide"><img class="paper-horizontal" src="./content/For acheivements/dainik-300x238.jpg" alt="Newspaper Coverage 7"></div>
+              <div data-history="8" class="swiper-slide"><img class="paper-horizontal" src="./content/For acheivements/index9-283x300.jpg" alt="Newspaper Coverage 8"></div>
+              <div data-history="9" class="swiper-slide"><img class="paper-horizontal" src="./content/For acheivements/WhatsApp-Image-2021-03-23-at-10.34.25-PM-e1723318513522-191x300.jpeg" alt="Newspaper Coverage 9"></div>
             </div>
             <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div>
@@ -233,7 +382,7 @@
         <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
           <div class="box">
             <div class="icon"><i class="bi bi-briefcase"></i></div>
-            <h4 class="title"><a href="">Women’s Empowerment</a></h4>
+            <h4 class="title"><a href="">Women's Empowerment</a></h4>
             <p class="description">We offer skill development programs, vocational training, and awareness sessions to equip women with the tools to become financially independent. Our focus is on building confidence, resilience, and leadership from the ground up.</p>
           </div>
         </div>
@@ -401,6 +550,43 @@
       delay: 16,
       time: 2000
     });
+  </script>
+
+  <script>
+  document.addEventListener('DOMContentLoaded', function() {
+    const slides = document.querySelectorAll('.certificate-slide');
+    const prevButton = document.querySelector('.certificate-prev');
+    const nextButton = document.querySelector('.certificate-next');
+    const dots = document.querySelectorAll('.certificate-pagination .dot');
+    let currentSlide = 0;
+
+    function showSlide(index) {
+      slides.forEach(slide => slide.classList.remove('active'));
+      dots.forEach(dot => dot.classList.remove('active'));
+      slides[index].classList.add('active');
+      dots[index].classList.add('active');
+    }
+
+    function nextSlide() {
+      currentSlide = (currentSlide + 1) % slides.length;
+      showSlide(currentSlide);
+    }
+
+    function prevSlide() {
+      currentSlide = (currentSlide - 1 + slides.length) % slides.length;
+      showSlide(currentSlide);
+    }
+
+    prevButton.addEventListener('click', prevSlide);
+    nextButton.addEventListener('click', nextSlide);
+
+    dots.forEach((dot, index) => {
+      dot.addEventListener('click', () => {
+        currentSlide = index;
+        showSlide(currentSlide);
+      });
+    });
+  });
   </script>
 
 </body>
