--- a/initiatives-section.html
+++ b/initiatives-section.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="./content/favicon.png" type="image/x-icon">
-  <title>APB Charitable Trust</title>
+  <title>Vijay Social Welfare Society</title>
 
 
   <!-- Google Fonts -->
@@ -38,7 +38,7 @@
     <nav class="shadow-lg">
       <div class="brand">
         <a href="index.html">
-          <img src="./content/logo.png" alt="" srcset="">
+          <img src="./content/logo.png" alt="Logo" style="height: auto !important; min-height: 80px !important; max-height: 150px !important; width: auto !important; max-width: none !important; object-fit: contain !important;">
         </a>
       </div>
       <div class="hamburger">
@@ -48,10 +48,9 @@
       <div class="menu" id="nav-menu">
         <a href="index.html">HOME</a>
         <a href="index.html#about">ABOUT US</a>
-        <a href="index.html#achievements">ACHEIVEMENTS</a>
-        <a href="index.html#services">WHAT WE DO</a>
-        <a href="initiatives-section.html">OUR INITIATIVES</a>
-        <a href="index.html#team">TEAM</a>
+        <a href="initiatives-section.html">OUR PROJECTS</a>
+        <a href="#services">GET INVOLVED</a>
+        <a href="">DONATE US</a>
         <a href="#contact">CONTACT US</a>
       </div>
     </nav>
