Update image sources in index.html for carousel items to reflect new project visuals, enhancing the overall presentation of the initiatives section.

--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
       </div>
       <div class="row d-lg-none" data-aos="fade-up" data-aos-delay="200">
         <div class="owl-carousel owl-theme">
-          <div class="item"><img class="about-img1" src="./content/For Carousel/about.jpeg" alt="" srcset="">
+          <div class="item"><img class="about-img1" src="./content/For Carousel/akksharproject2.jpg" alt="" srcset="">
           </div>
-          <div class="item"><img src="./content//For Carousel/img1.jpeg" alt=""></div>
-          <div class="item"><img src="./content//For Carousel/img2.jpeg" alt=""></div>
+          <div class="item"><img src="./content//For Carousel/image-133-q6tx2o3s6dc4e9odz60cdxcy32dtz0bmkz2e4ncl80.png" alt=""></div>
+          <div class="item"><img src="./content//For Carousel/UdayProject1.jpg" alt=""></div>
         </div>
         <div class="owl-nav">
           <div class="owl-prev">
