Add testimonials section to index.html with new styles and content to showcase student experiences and feedback

--- a/index.html
+++ b/index.html
@@ -458,6 +458,111 @@
     </div>
   </section>
 
+    <!-- Testimonials Section -->
+    <section id="testimonials">
+      <div class="wave-2">
+        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+          <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
+        </svg>
+      </div>
+      <div class="section-title-secondary">
+        <h1>Testimonials</h1>
+        <h3 class="testimonial-subtitle">Akshar (Education & Literacy)</h3>
+        <p class="testimonial-description">These are firsthand testimonials from children from impoverished households:</p>
+      </div>
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-6 mb-4" data-aos="fade-right">
+            <div class="testimonial-card">
+              <div class="quote-icon">
+                <i class="fas fa-quote-left"></i>
+              </div>
+              <div class="testimonial-content">
+                <p class="testimonial-text"><em>I deeply value the opportunity to attend school and engage in learning. I love attending classes.</em></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 mb-4" data-aos="fade-left">
+            <div class="testimonial-card">
+              <div class="quote-icon">
+                <i class="fas fa-quote-left"></i>
+              </div>
+              <div class="testimonial-content">
+                <p class="testimonial-text"><em>Attending school has been transformative, helping me overcome negative influences and harmful habits I encountered at a young and vulnerable age. I am committed to attending classes regularly and studying diligently, as I aspire to become a doctor.</em></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  
+    <style>
+      #testimonials {
+        padding: 60px 0;
+        background-color: #f8f3f3;
+        position: relative;
+      }
+  
+      .testimonial-subtitle {
+        color: #c1331b;
+        margin-top: 20px;
+        font-size: 1.5rem;
+        font-weight: 600;
+      }
+  
+      .testimonial-description {
+        color: #666;
+        margin-top: 10px;
+        font-size: 1.1rem;
+      }
+  
+      .testimonial-card {
+        background: white;
+        border-radius: 15px;
+        padding: 30px;
+        box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
+        height: 100%;
+        position: relative;
+        transition: transform 0.3s ease;
+      }
+  
+      .testimonial-card:hover {
+        transform: translateY(-5px);
+      }
+  
+      .quote-icon {
+        color: #c1331b;
+        font-size: 2rem;
+        margin-bottom: 20px;
+        opacity: 0.6;
+      }
+  
+      .testimonial-content {
+        position: relative;
+      }
+  
+      .testimonial-text {
+        color: #444;
+        font-size: 1.1rem;
+        line-height: 1.6;
+        margin: 0;
+      }
+  
+      @media (max-width: 768px) {
+        .testimonial-card {
+          margin-bottom: 20px;
+        }
+        
+        .testimonial-text {
+          font-size: 1rem;
+        }
+        
+        .testimonial-subtitle {
+          font-size: 1.3rem;
+        }
+      }
+    </style>
+
   <!-- Teams -->
   <section id="team" class="team">
     <div class="wave">
